[package]
name = "voltlane-enc"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Encryption library for Voltlane, providing secure identification using ECDH and ChaCha20-Poly1305."
repository = "https://github.com/voltlane/enc"
homepage = "https://voltlane.net"

[dependencies]
chacha20poly1305 = "0.10.1"
k256 = { version = "0.13.4", features = ["ecdh"] }
zeroize = { version = "1.8.1", features = ["derive"] }
